// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restate getAllKeys works correctly: getAllKeys 1`] = `
Array [
  "ui",
  "ui.a",
  "ui.a.b",
  "users",
  "users.password",
  "users.password.hash",
  "users.password.data",
  "users.name",
  "ke",
  "ke.a",
  "d",
]
`;

exports[`restate rerender only needed times 1`] = `
Array [
  Array [
    0,
  ],
  Array [
    1,
  ],
  Array [
    2,
  ],
  Array [
    3,
  ],
]
`;

exports[`restate rerender only needed times 2`] = `
Array [
  Array [
    true,
  ],
]
`;
